--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,11 @@
 {
+    "email": "email",
+    "first_name" : "first name",
+    "last_name" : "last name",
+    "username": "username",
+    "password": "password",
+    
+    "register": "register",
+    
     "notifications": "notifications"
 }
